tests/reference/ast_new-comprehension1-69cf2af.stderr
syntax error: Token 'for' is unexpected here
  --> tests/parser/comprehension1.py:38:12
   |
38 | (string[i] for i in range(len(string)-1, -1, -1))
   |            ^^^ 
